<resources>
    <string name="app_name">medicalApp</string>
    <string name="title_home">Berita</string>
    <string name="title_penyakit">Daftar Penyakit</string>
    <string name="title_rumah_sakit">Rumah Sakit</string>
    <string name="title_pandemi">COVID-19</string>
    <string name="title_kasus_per_provinsi">Kasus per Provinsi</string>
    <string name="title_kasus_per_negara">Kasus per Negara</string>

    //Navbar
    <string name="string_berita">Berita</string>
    <string name="string_penyakit">"Penyakit</string>
    <string name="string_rumah_sakit">Rumah Sakit</string>
    <string name="string_lainnya">Lainnya</string>

    //Illness Detail Strings
    <string name="string_ringkasan">Ringkasan</string>
    <string name="string_penyebab">Penyebab</string>
    <string name="string_gejala">Gejala</string>
    <string name="string_diagnosa">Diagnosa</string>
    <string name="string_pencegahan">Pencegahan</string>
    <string name="string_spesialis">Spesialis</string>

    //Map Strings
    <string name="button_cari_rs">Cari Rumah Sakit</string>
    <string name="button_tampilan_daftar">Tampilan Daftar</string>
    <string name="button_tampilan_peta">Tampilan Peta</string>

    //Hospital Detail Strings
    <string name="string_rating">Rating</string>
    <string name="string_alamat">Alamat</string>
    <string name="string_telpon">Telpon</string>
    <string name="string_website">Website</string>
    <string name="string_double_dot">:</string>

    //Pandemi
    <string name="string_covid19_dunia">Kasus COVID-19 di Dunia</string>
    <string name="string_covid19_indo">Kasus COVID-19 di Indonesia</string>
    <string name="string_kasus_per_negara">Kasus per Negara</string>
    <string name="string_kasus_per_provinsi">Kasus per Provinsi</string>
    <string name="string_myth_buster">Myth Buster</string>
    <string name="string_negara">Negara</string>
    <string name="string_provinsi">Provinsi</string>
    <string name="string_positif">Positif</string>
    <string name="string_sembuh">Sembuh</string>
    <string name="string_meninggal">Meninggal</string>
</resources>
