<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="38"
        android:text="@string/string_provinsi"
        style="@style/Paragraph2White"/>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#E5E5E5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/string_positif"
        android:textAlignment="center"
        style="@style/Paragraph2White"/>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#E5E5E5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/string_sembuh"
        android:textAlignment="center"
        style="@style/Paragraph2White"/>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#E5E5E5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="22"
        android:text="@string/string_meninggal"
        android:textAlignment="center"
        style="@style/Paragraph2White"/>

</TableRow>