<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.daftarIllness.detailPenyakit.PenyakitTab1Fragment"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_illness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/string_ringkasan"
            style="@style/Header1Black"

            android:textStyle="bold"
            android:background="#E5E5E5"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            style="@style/ParagraphBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/string_penyebab"
            style="@style/Header1Black"
            android:textStyle="bold"
            android:background="#E5E5E5"/>

        <TextView
            android:id="@+id/cause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            style="@style/ParagraphBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/string_gejala"
            style="@style/Header1Black"
            android:textStyle="bold"
            android:background="#E5E5E5"/>

        <TextView
            android:id="@+id/symptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            style="@style/ParagraphBlack"/>

    </LinearLayout>
</ScrollView>