<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:padding="16dp"-->
<!--    tools:context=".ui.pandemi.PandemiActivity"-->
<!--    android:orientation="vertical">-->

<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:indeterminate="true"/>-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/string_covid19_indonesia"-->
<!--        style="@style/Header"/>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginVertical="10dp"-->
<!--        android:orientation="horizontal">-->

<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/string_positif"-->
<!--                style="@style/Header"/>-->

<!--            <TextView-->
<!--                android:id="@+id/text_positif_sakit"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Header2"-->
<!--                android:textColor="#FF0000"/>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/string_sembuh"-->
<!--                style="@style/Header"/>-->

<!--            <TextView-->
<!--                android:id="@+id/text_sembuh"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Header2"-->
<!--                android:textColor="#008000"/>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="3"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/string_meninggal"-->
<!--                style="@style/Header"/>-->

<!--            <TextView-->
<!--                android:id="@+id/text_meninggal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Header2"/>-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--    <Button-->
<!--        android:id="@+id/button_kasus_provinsi"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/string_kasus_per_provinsi"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textAllCaps="false"-->
<!--        android:background="@drawable/rounded_button_dark"/>-->

<!--</LinearLayout>-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.pandemi.PandemiActivity">


            <TextView
                style="@style/Header1Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_covid19_indo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_positif" />

                    <TextView
                        android:id="@+id/text_indo_positif"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FF0000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_sembuh" />

                    <TextView
                        android:id="@+id/text_indo_sembuh"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#008000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_meninggal" />

                    <TextView
                        android:id="@+id/text_indo_meninggal"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_kasus_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_dark"
                android:text="@string/string_kasus_per_provinsi"
                style="@style/Header1White"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.pandemi.PandemiActivity">

            <TextView
                style="@style/Header1Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_covid19_dunia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_positif" />

                    <TextView
                        android:id="@+id/text_dunia_positif"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FF0000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_sembuh" />

                    <TextView
                        android:id="@+id/text_dunia_sembuh"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#008000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Header1Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_meninggal" />

                    <TextView
                        android:id="@+id/text_dunia_meninggal"
                        style="@style/Header2Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_kasus_negara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_dark"
                android:text="@string/string_kasus_per_negara"
                style="@style/Header1White"
                android:textAllCaps="false" />



        </LinearLayout>

        <Button
            android:id="@+id/button_myth_buster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_button_dark"
            android:text="@string/string_myth_buster"
            style="@style/Header1White"
            android:textAllCaps="false" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

</RelativeLayout>